--- a/web/package.json
+++ b/web/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-scripts": "3.4.4",
+    "@types/react-leaflet": "^2.5.2",
+    "axios": "^0.20.0",
+    "leaflet": "^1.7.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-error-overlay": "^6.0.9",
+    "react-icons": "^3.11.0",
+    "react-leaflet": "^2.7.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -35,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.6"
   }
 }
